# discord_bot

./: app.py  bot.py  config.py  logger.py  pyproject.toml  test.py
service/: ai_service.py
